@@ -103,6 +103,58 @@ class TestMessage:
         assert 1 == len(nlines)
         assert ("['%s', '%s', 'renewed', '%s']" % (self.mcmd, self.mlog, domain)) == nlines[0].strip()
 
+    def test_901_010(self):
+        # MD with static cert files, lifetime in renewal window, no message about renewal
+        domain = self.test_domain
+        dnsList = [ domain, 'www.%s' % domain ]
+        testpath = os.path.join(TestEnv.GEN_DIR, 'test_901_010')
+        # cert that is only 10 more days valid
+        CertUtil.create_self_signed_cert(dnsList, { "notBefore": -70, "notAfter": 20  },
+            serial=901010, path=testpath)
+        cert_file = os.path.join(testpath, 'pubcert.pem')
+        pkey_file = os.path.join(testpath, 'privkey.pem')
+        assert os.path.exists(cert_file)
+        assert os.path.exists(pkey_file)
+        conf = HttpdConf()
+        conf.add_admin("admin@not-forbidden.org" )
+        conf.add_message_cmd( "%s %s" % (self.mcmd, self.mlog) )
+        conf.start_md(dnsList)
+        conf.add_line("MDCertificateFile %s" % (cert_file))
+        conf.add_line("MDCertificateKeyFile %s" % (pkey_file))
+        conf.end_md()
+        conf.add_vhost(TestEnv.HTTPS_PORT, domain, aliasList=[])
+        conf.install()
+        assert TestEnv.apache_restart() == 0
+        assert not os.path.isfile(self.mlog)
+        
+    def test_901_011(self):
+        # MD with static cert files, lifetime in warn window, check message
+        domain = self.test_domain
+        dnsList = [ domain, 'www.%s' % domain ]
+        testpath = os.path.join(TestEnv.GEN_DIR, 'test_901_011')
+        # cert that is only 10 more days valid
+        CertUtil.create_self_signed_cert(dnsList, { "notBefore": -85, "notAfter": 5  },
+            serial=901011, path=testpath)
+        cert_file = os.path.join(testpath, 'pubcert.pem')
+        pkey_file = os.path.join(testpath, 'privkey.pem')
+        assert os.path.exists(cert_file)
+        assert os.path.exists(pkey_file)
+        conf = HttpdConf()
+        conf.add_admin("admin@not-forbidden.org" )
+        conf.add_message_cmd( "%s %s" % (self.mcmd, self.mlog) )
+        conf.start_md(dnsList)
+        conf.add_line("MDCertificateFile %s" % (cert_file))
+        conf.add_line("MDCertificateKeyFile %s" % (pkey_file))
+        conf.end_md()
+        conf.add_vhost(TestEnv.HTTPS_PORT, domain, aliasList=[])
+        conf.install()
+        assert TestEnv.apache_restart() == 0
+        time.sleep(1)
+        nlines = open(self.mlog).readlines()
+        assert 1 == len(nlines)
+        assert ("['%s', '%s', 'expiring', '%s']" % (self.mcmd, self.mlog, domain)) == nlines[0].strip()
+        
+
 
 
     
